@@ -43,19 +43,26 @@ MD5 8e7b24c3c6b13e2228034d738bc9732b files/cpio-2.6-writeOutHeaderBufferOverflow
 RMD160 f5424c6e3c39a2578737165dbbb6276de880eb45 files/cpio-2.6-writeOutHeaderBufferOverflow.patch 18611
 SHA256 aed95b698c91951063371bcf524bc0f15b31fe9d967519b0043a886995368f69 files/cpio-2.6-writeOutHeaderBufferOverflow.patch 18611
 DIST cpio-2.6.tar.bz2 448452 RMD160 52b7e21c9989dd28da5dae1630b57a301817a788 SHA1 4f65821ec10eb2c330a582fbc8112960c9849ecd SHA256 6e60c5c370d451605fcb23e26cc37c18182f62009282ca73bf5dea4519e17360
-EBUILD cpio-2.6-r5.ebuild 1626 RMD160 64bb814abc4732cf1d071f8206d15b5ba04a41da SHA1 c471d81d36e357fc9fd494d31d647916af204439 SHA256 b04dba79fd0929f3cd96b1d5922bd729c35d53ae832deac59b5bd43c776c2f6b
-MD5 484de2172623d0c89ceda4730033a546 cpio-2.6-r5.ebuild 1626
-RMD160 64bb814abc4732cf1d071f8206d15b5ba04a41da cpio-2.6-r5.ebuild 1626
-SHA256 b04dba79fd0929f3cd96b1d5922bd729c35d53ae832deac59b5bd43c776c2f6b cpio-2.6-r5.ebuild 1626
-MISC ChangeLog 7905 RMD160 fb2eff9b11198a6069dc1d136a6473fedd4f92df SHA1 47cc5c8f686f1c0093caa1eddeec1ac8cfa5647a SHA256 99a546e6f32dd98770801ac6dfe17a1fe71e391b509120480f5ce92fbc5c9f37
-MD5 79d398945db9b930aa7fa345e360b38c ChangeLog 7905
-RMD160 fb2eff9b11198a6069dc1d136a6473fedd4f92df ChangeLog 7905
-SHA256 99a546e6f32dd98770801ac6dfe17a1fe71e391b509120480f5ce92fbc5c9f37 ChangeLog 7905
+DIST cpio-2.7.tar.bz2 698221 RMD160 0ae35717237133da5bba18376af0ec685ac67360 SHA1 ce1c8ab703d62fc1d30ca59e044ba9f43c3db574 SHA256 b59390450233b5298d210f6369e98d91d07b7f4261ddb962d654185dd02b5b0e
+EBUILD cpio-2.6-r5.ebuild 1623 RMD160 b331a1459f59f7b2007fc7c5104d757a08b2bdb9 SHA1 82e6c6d878d6f8534456abd96239fc5b37524be0 SHA256 a219d91b9e1a77c3f7eb557489d86e1ec2a7128ac276c36e9d66d845ae7db2c0
+MD5 f0ffea4dccba13fcb2196d4f6728a082 cpio-2.6-r5.ebuild 1623
+RMD160 b331a1459f59f7b2007fc7c5104d757a08b2bdb9 cpio-2.6-r5.ebuild 1623
+SHA256 a219d91b9e1a77c3f7eb557489d86e1ec2a7128ac276c36e9d66d845ae7db2c0 cpio-2.6-r5.ebuild 1623
+EBUILD cpio-2.7.ebuild 909 RMD160 4a2ed6b51daefbb474dcd35a154abfe13eddf95c SHA1 caf97da128ad4542886ce9d4b026a0c5ae7991f3 SHA256 7b21c8a3f1a2ab273c550a835c369a83432428c3415b0264d8abfed6dc557521
+MD5 664b5178f71b5e5a91d6fe355fc40502 cpio-2.7.ebuild 909
+RMD160 4a2ed6b51daefbb474dcd35a154abfe13eddf95c cpio-2.7.ebuild 909
+SHA256 7b21c8a3f1a2ab273c550a835c369a83432428c3415b0264d8abfed6dc557521 cpio-2.7.ebuild 909
+MISC ChangeLog 8111 RMD160 6fbf9bc7f331f8e5244fcd871f6a7acf75cec2ba SHA1 213bd2a5649165b18c819f03655d5a6623e96d41 SHA256 5b953ed1ccb8c93147e70f0b93861aba7d15448cd9102996067490c8fdcfd9fe
+MD5 00fc2d2bf3c625a8c4a7402541115c57 ChangeLog 8111
+RMD160 6fbf9bc7f331f8e5244fcd871f6a7acf75cec2ba ChangeLog 8111
+SHA256 5b953ed1ccb8c93147e70f0b93861aba7d15448cd9102996067490c8fdcfd9fe ChangeLog 8111
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
 MD5 9a09f8d531c582e78977dbfd96edc1f2 metadata.xml 164
 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 metadata.xml 164
 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92 metadata.xml 164
-size 229 files/digest-cpio-2.6-r5 229
+MD5 bef54a4a4a27985f98e3bbbf5e60be49 files/digest-cpio-2.6-r5 229
 RMD160 d4edaf1f65000fc94e922b3db987e3d488936ea8 files/digest-cpio-2.6-r5 229
 SHA256 6052e569e0bd559ae4cc8b4173a48f2d0ee7a754d0ec19b67e5a9bdda3ce0266 files/digest-cpio-2.6-r5 229
-MD5 bef54a4a4a27985f98e3bbbf5e60be49 files/digest-cpio-2.6-r5 229
+MD5 ac5c998994855bb75aa7658b7eb64966 files/digest-cpio-2.7 229
+RMD160 9552f623fc8ba0f30a5a3ccfe46faf79c34d68bf files/digest-cpio-2.7 229
+SHA256 0e78bc2601b3919276568d6f1ab37939cc6b5d91d2ec5da21efa141aab888f4b files/digest-cpio-2.7 229
