@@ -1,0 +1,40 @@
+# Copyright 1999-2006 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/app-arch/cpio/cpio-2.7.ebuild,v 1.1 2006/10/21 22:00:54 vapier Exp $
+
+EAPI="prefix"
+
+inherit eutils
+
+DESCRIPTION="A file archival tool which can also read and write tar files"
+HOMEPAGE="http://www.gnu.org/software/cpio/cpio.html"
+SRC_URI="mirror://gnu/cpio/${P}.tar.bz2"
+
+LICENSE="GPL-2 LGPL-2"
+SLOT="0"
+KEYWORDS="~amd64 ~ppc-macos ~x86 ~x86-macos"
+IUSE="nls"
+
+DEPEND=""
+
+src_unpack() {
+	unpack ${A}
+	cd "${S}"
+#	epatch "${FILESDIR}"/${PN}-2.6-chmodRaceC.patch #90619
+}
+
+src_compile() {
+	econf \
+		$(use_enable nls) \
+		$(with_bindir) \
+		--with-rmt=${EPREFIX}/usr/sbin/rmt \
+		|| die
+	emake || die
+}
+
+src_install() {
+	emake install DESTDIR="${D}" || die
+	dodoc ChangeLog NEWS README INSTALL
+	rm -f "${ED}"/usr/share/man/man1/mt.1
+	rmdir "${ED}"/usr/libexec || die
+}
